--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.active {
+    --tw-bg-opacity: 1;
+    color: rgb(59 130 246 / var(--tw-bg-opacity));
+}
