--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,7 @@
     --tw-bg-opacity: 1;
     color: rgb(59 130 246 / var(--tw-bg-opacity));
 }
+
+.header {
+    background: linear-gradient(rgba(0,0,0,0.65), rgba(0,0,0,0.65)), url('./assets/images/header-img.jpg') no-repeat center/cover;
+}
